# valentine

./: .gitignore  .gitmodules  Attribute_Clusters(Matches).json  Clustering.ipynb  Distribution_Clusters.json  Dockerfile  LICENSE  MANIFEST.in  README.md  Schema matching - similarities.ipynb  Seeping Semantics.ipynb  _config.yml  algorithm_configurations.json  config.json  config_coma.json  config_cupid.json  config_sem_prop.json  config_similarity_flooding.json  cupid_test.py  entrypoint.sh  environment.yml  generate_configuration_files.py  index.md  install-dependencies.sh  parse_config.py  pyproject.toml  read_data.py  read_data_movies.py  read_data_tpch.py  req.txt  requirements-clustering-scale.txt  requirements-clustering.txt  requirements-cupid.txt  requirements.txt  run_experiments.sh  run_gnu_parallel.sh  run_job.py  run_memory_intensive_task.sh  run_parallel_task.sh  run_semprop_docker.sh  (+9 more)
.github/: run_tests.yml
SimilarityFlooding/: propagation_graph.py  similarity_flooding.py  test_paper_example.py  utils.py
_layouts/: default.html
algorithms/: algorithms.py  base_matcher.py
clustering/: Emd.py  __init__.py  column_model.py  correlation_clustering.py  discovery.py  emd_utils.py
clustering_scale/: column_model_scale.py  correlation_clustering_scale.py  discovery_scale.py  emd_utils.py  scale_utils.py
configuration/: algorithm_configurations.json  generate_configuration_files.py
cupid/: cupid_model.py  elements.py  linguistic_matching.py  pipeline.py  structural_similarity.py  tree_match.py
data_loader/: base_loader.py  data_loaders.py  (+4 more)
(+347 files in other folders)
